<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragments.Home">

    <ImageView
        android:id="@+id/languageIV"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arab" />


    <LinearLayout
        android:id="@+id/lastJLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/lastmonth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/last_jumua"
            android:textColor="@color/secondary"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/lastJ_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="€1200"
            android:textColor="@color/secondary"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lastmonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/thismonth"
        app:layout_constraintEnd_toEndOf="@+id/lastJLL"
        app:layout_constraintStart_toStartOf="@+id/lastJLL">

        <TextView
            android:id="@+id/textView45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/last_month"
            android:textColor="@color/secondary"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/lastmonth_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="€1200"
            android:textColor="@color/secondary"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thismonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/lastJLL"
        app:layout_constraintStart_toStartOf="@+id/lastJLL">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/this_month"
            android:textColor="@color/secondary"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/thismonth_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="€1200"
            android:textColor="@color/secondary"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_weight="1"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/round_corner_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/total"
            android:textColor="@color/secondary"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/total_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="€12000"
            android:textColor="@color/secondary"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>